--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -1,6 +1,4 @@
-Flask==2.0.2
-MarkupSafe==2.0.1
-Werkzeug==2.0.2
+Flask==3.0.3
 Flask-Cors==3.0.8
 jsonref==0.2
 jsonschema==3.2.0
@@ -8,4 +6,4 @@ jsonpath-ng==1.5.3
 PyYAML==5.3.1
 requests==2.30.0
 pylint
-waitress
+Gunicorn
